# EmbeddedLinux-NTI

./: .gitignore  README.md
0-Linux Admin-Embedded Tasks/Day1/: Maker.sh
0-Linux Admin-Embedded Tasks/Day3/: f1
0-Linux Admin-Embedded Tasks/Day3/tmp/: commands.list
0-Linux Admin-Embedded Tasks/Day6/Calc Dynamic/: main.c  mainDynamic.elf
0-Linux Admin-Embedded Tasks/Day6/Calc Static/: notes.txt
0-Static-Dynamic-Library/: README.md
0-Static-Dynamic-Library/Project/: main.c  mainDynamic.elf  mainStatic.elf
0-Static-Dynamic-Library/Project/includes/: print.h
0-Static-Dynamic-Library/Project/lib/: print.c
1-C++/: gitFetcher.cpp
1-C++/IPC/0-Piping & Signals/: Pipe.cpp  Recv.cpp
1-C++/IPC/0-Piping-Signals/: Pipe.hpp  Sender.cpp
1-C++/IPC/1-MemoryShare/: SharedMemory.cpp  SharedMemory.hpp  reader.cpp  writer.cpp
1-Crosstool-NG/: README.md
2-EmbeddedLinux/0-Static-Dynamic-Library/: README.md
2-EmbeddedLinux/2-BuildRoot-Linux-Image/: README.md
2-EmbeddedLinux/3-YOCTO/: README.md
2-EmbeddedLinux/4-DeviceDrivers/: README.md
2-U-Boot/: README.md
3-Makefile-Methods/: README.md
4-BusyBox/: README.md
4-BusyBox/NFS/: README.md
4-GoogleTest/: README.md
5-Initprocess/: README.md
5-Qt/: README.md
5-Qt/AirController/: CMakeLists.txt  a.out  images.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  new_label.cpp  new_label.h  test.cpp
6-BuildRoot/: README.md
6-BuildRoot/Create-Buildroot-Package/: README.md
7-YOCTO/: README.md
7-YOCTO/Create layer/: README.md
7-YOCTO/Kernel module recipe/: README.md
8-DeviceDrivers/: README.md
8-DeviceDrivers/simple_kernel_module/: .hello.ko.cmd  .hello.mod.cmd  hello.c  hello.ko  hello.mod.c
BuildRoot/: README.md
Linux Admin-Embedded Tasks/Day8/ARM-file/: CMakeLists.txt
Linux Admin-Embedded Tasks/Day8/ARM-file/buildArm/: CMakeCache.txt  Makefile
Linux Admin-Embedded Tasks/Day8/ARM-file/src/: main.c
Linux Admin-Embedded Tasks/Day9/: uboot.env
Linux Admin/Day1/: oldpasswd  solution.md  solution.txt
Linux Admin/Day2/: binary_search.c  solution.md  solution.txt
Linux Admin/Day3/: solution.txt  task.sh
Linux Admin/Day9/: TestStatic  imp.md
Linux Admin/ImageOutput/: launch.sh
Other/CMake Task/: CMakeLists.txt
Other/CMake Task/include/: print.h
Other/CMake Task/src/: main.cpp
Other/makeWAY/cmake/: CMakeLists.txt  main.cpp
YOCTO/: README.md
(+103 files in other folders)
